kubernetes/apps/flux-system/github/app/webhooks/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  hostnames:
    - "flux-webhook.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
